--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
               uses: docker/login-action@v3
               with:
                 username: ${{ secrets.DOCKER_HUB_USER }}
-                password: ${{ secrets.DOCKER_PAT }}
+                password: ${{ secrets.DOCKER_HUB_PAT }}
             
             - name: Setup docker build
               uses: docker/setup-buildx-action@v3 
