--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
                 context: .
                 file: ./Dockerfile
                 push: true
-                tags: ${{ secrets.DOCKER_HUB_USER }}/quote-gen:latest
+                tags: ${{ secrets.DOCKER_HUB_USER }}/quote-gen:latest2
     
 
 
